--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <p>
-    hola a todos, este es mi sitio web, cualquier aporte es bienvenido
+    hola a todos, este es mi sitio web, cualquier aporte es bienvenido; Así como cualquier idea radical e ingeniosa
+    
   </p>  
 </body>
 </html>
